# mc500ui

./: CMakeLists.txt  README.md
CommManager/: CMakeLists.txt  commmanager.cpp  commmanager.h  dataclasses.cpp  dataclasses.h  protoparser.cpp  protoparser.h  tcpsocket.cpp  tcpsocket.h
CommManager/Protos/: CMakeLists.txt  mc500ipc.pb.cc  mc500ipc.pb.h  mc500ipc.proto
MainApp/: CMakeLists.txt  alarmwidget.cpp  alarmwidget.h  alarmwidget.ui  coordinatewidget.cpp  coordinatewidget.h  coordinatewidget.ui  main.cpp  mainwindow.cpp  mainwindow.ui  programwidget.cpp  programwidget.h  programwidget.ui  resources.qrc  valuedetailwidget.cpp  valuedetailwidget.h  valuedetailwidget.ui
MainApp/cssStyle/: styles.qss
